check if customers email exists, if customer dont exist returning error message and only the room you wanted to book